@@ -1,8 +1,19 @@
 #!/bin/sh
-# $Id: autogen.sh,v 1.1.1.1 2001/12/22 21:12:06 rmk Exp $
+# $Id: autogen.sh,v 1.2 2002/08/29 20:40:09 dlowder Exp $
+echo -n "Libtoolize..."
 libtoolize --force --copy
+echo "Done."
+echo -n "Aclocal..."
 aclocal
+echo "Done."
+echo -n "Autoheader..."
 autoheader
+echo "Done."
+echo -n "Automake..."
 automake --add-missing --copy
+echo "Done."
+echo -n "Autoconf..."
 autoconf
-./configure $*
+echo "Done."
+#./configure $*
+echo "Now you can do ./configure, make, make install."
